--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 <body class="bg-light">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 bg-dark text-white text-center py-4">
+            <div class="col-lg-4 text-white text-center py-4" style="background-color: #8a8886;">
                 <div class="header">
                     <img src="https://www.freeiconspng.com/uploads/resume-icon-png-2.png" alt=""
-                        class="img-thumbnail rounded-pill mb-2">
+                        class="img-thumbnail rounded-pill mb-2 w-75 h-75">
                     <h1>Yadu S Nair</h1>
                     <h5>SOFTWARE DEVELOPER</h5>
                 </div>
                 <div>
-                    <h6 class="mb-4 rounded-pill bg-white text-black py-3"> CONTACT</h6>
+                    <h6 class="mb-4 rounded-pill  bg-dark text-white py-3"> CONTACT</h6>
                     <ul class="list-unstyled">
                         <li>
                             <i class="fas fa-phone-alt mx-1"></i>
@@ -47,7 +47,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h6 class="mb-4 rounded-pill bg-white text-black py-3">SKILLS</h6>
+                    <h6 class="mb-4 rounded-pill  bg-dark text-white py-3">SKILLS</h6>
                     <ul class="list-unstyled">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -56,7 +56,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h6 class="mb-4 rounded-pill bg-white text-black py-3">EDUCATION</h6>
+                    <h6 class="mb-4 rounded-pill  bg-dark text-white py-3">EDUCATION</h6>
                     <ul class="list-unstyled">
                         <li>B-TECH,MECHANICAL ENGINEERING</li>
                         <li>HSE</li>
